--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.6.0) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 06 Feb 2019 23:38:48 +0100
+
 lintian (2.6.0) unstable; urgency=medium
 
   * Summary of tag changes:
