--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.9.1+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 27 Feb 2019 08:39:58 +0100
+
 lintian (2.9.1) unstable; urgency=medium
 
   [ Felix Lechner ]
