--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.10.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 08 Mar 2019 17:56:59 +0000
+
 lintian (2.10.0) unstable; urgency=medium
 
   [ Chris Lamb ]
