--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.11.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 18 Mar 2019 18:54:42 -0400
+
 lintian (2.11.0) unstable; urgency=medium
 
   [ Chris Lamb ]
