--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.12.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 04 Apr 2019 12:20:51 +0200
+
 lintian (2.12.0) unstable; urgency=medium
 
   * Summary of tag changes:
