Revert "Add changelog entries for my most recent changes"; we generate these since a number of releases ago.
This reverts commit 8a686e4a54223c8bdddb7fd9c61868b90d32910a.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,6 @@
 lintian (2.12.0+git) UNRELEASED; urgency=medium
 
-  [ Adam D. Barratt ]
-  * private/refresh-locale-codes: update to work with current
-    isoquery.
-  * data/fields/virtual-packages: update.
-  * data/files/locale-codes: update (after fixing the refresh script).
+  * WIP
 
  -- Chris Lamb <lamby@debian.org>  Thu, 04 Apr 2019 12:20:51 +0200
 
