--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.13.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 22 Apr 2019 10:25:13 +0100
+
 lintian (2.13.0) unstable; urgency=medium
 
   * Summary of tag changes:
