--- a/t/tags/checks/systemd/systemd-general/debian/install
+++ b/t/tags/checks/systemd/systemd-general/debian/install
@@ -1,4 +1,3 @@
-debian/test.service etc/systemd/system/
-debian/test.service usr/lib/systemd/system/
-debian/sourced.service lib/systemd/system/
+debian/systemd-general.test.service etc/systemd/system/
+debian/systemd-general.test.service usr/lib/systemd/system/
 debian/test.conf etc/tmpfiles.d/
