--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.17.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 06 Aug 2019 18:30:12 +0100
+
 lintian (2.17.0) unstable; urgency=medium
 
   * Summary of tag changes:
