--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.18.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 14 Aug 2019 09:19:42 -0700
+
 lintian (2.18.0) unstable; urgency=medium
 
   * Summary of tag changes:
