--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-lintian (2.20.0+git) UNRELEASED; urgency=medium
+lintian (2.21.0) unstable; urgency=medium
 
-  * WIP
+  * Add 'iIF' to the list of spelling exceptions ignored in binaries.
+    Thanks to Graham Inggs and Matthias Klose. (Closes: #939637)
+  * Suggest using libjs-bootstrap over libjs-twitter-bootstrap as the
+    latter is not available in Debian buster. Thanks to Carsten Schoenert
+    for the suggestion. (Closes: #939416)
+  * Merge our two CI pipeline stages, avoiding an additional ~5 minute
+    initial setup/teardown time as well as avoiding having to parse the
+    checksums of the yet-to-be-downloaded build dependencies.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 03 Sep 2019 09:35:06 +0100
+ -- Chris Lamb <lamby@debian.org>  Sat, 07 Sep 2019 13:44:36 +0000
 
 lintian (2.20.0) unstable; urgency=medium
 
