--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.21.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 07 Sep 2019 14:45:34 +0100
+
 lintian (2.21.0) unstable; urgency=medium
 
   * Add 'iIF' to the list of spelling exceptions ignored in binaries.
