--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.22.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 21 Sep 2019 05:09:16 +0200
+
 lintian (2.22.0) unstable; urgency=medium
 
   * Summary of tag changes:
