--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,16 @@
-lintian (2.22.0+git) UNRELEASED; urgency=medium
+lintian (2.23.0) unstable; urgency=medium
 
-  * WIP
+  * Allow the lowercase version of "UNRELEASED" changelog entries in
+    various tags. This is a convention used in the Debian ports archive.
+    (Closes: #940877)
+  * Drop matching for Source-Version substvars; they are not supported by
+    dpkg-dev anymore and results in us accidentally matching an incorrect
+    "Source-:Upstream-Version" variable. (Closes: #940878)
+  * Bump severity of script-uses-unversioned-python-in-shebang (ie.
+    "#!/usr/bin/env python") from classification to "pedantic" severity for
+    now. (Closes: #934853)
 
- -- Chris Lamb <lamby@debian.org>  Sat, 21 Sep 2019 05:09:16 +0200
+ -- Chris Lamb <lamby@debian.org>  Tue, 24 Sep 2019 10:31:54 +0000
 
 lintian (2.22.0) unstable; urgency=medium
 
