--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.23.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 24 Sep 2019 12:13:50 +0100
+
 lintian (2.23.0) unstable; urgency=medium
 
   * Allow the lowercase version of "UNRELEASED" changelog entries in
