--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-lintian (2.23.0+git) UNRELEASED; urgency=medium
+lintian (2.24.0) unstable; urgency=medium
 
-  * WIP
+  [ Felix Lechner ]
+  * Do not emit changelog-file-missing-explicit-entry when maintainer
+    revision is 0 (eg. 1.2.5-0+deb10u1). (Closes: #940994)
+  * Remove internal support for checking whether binary packages are
+    "native".
+  * Various code cleanups, splitting checks/fields.pm into smaller
+    components, moving numerous tags, etc.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 24 Sep 2019 12:13:50 +0100
+ -- Chris Lamb <lamby@debian.org>  Fri, 27 Sep 2019 08:15:59 +0000
 
 lintian (2.23.0) unstable; urgency=medium
 
