--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-lintian (2.24.0+git) UNRELEASED; urgency=medium
+lintian (2.25.0) unstable; urgency=medium
 
-  * WIP
+  * Fix false positives for templated (eg. "foo@.service") service files
+    when checking for packages that appear to lack corresponding init
+    scripts.
+  * Update the long description of the
+    init.d-script-depends-on-all-virtual-facility tag and whitelist the
+    sysvinit package from all such init.d checks. (Closes: #941140)
+  * Add 4.4.1 as a known Standards-Version.
 
- -- Chris Lamb <lamby@debian.org>  Fri, 27 Sep 2019 16:21:29 +0100
+ -- Chris Lamb <lamby@debian.org>  Wed, 02 Oct 2019 08:52:55 +0000
 
 lintian (2.24.0) unstable; urgency=medium
 
