--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.26.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 09 Oct 2019 17:19:32 -0700
+
 lintian (2.26.0) unstable; urgency=medium
 
   [ Chris Lamb ]
