--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.27.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Mon, 14 Oct 2019 11:00:37 -0700
+
 lintian (2.27.0) unstable; urgency=medium
 
   [ Chris Lamb]
