--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.28.0+git) UNRELEASED; urgency=medium
+
+  * WIP
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 17 Oct 2019 11:19:16 -0700
+
 lintian (2.28.0) unstable; urgency=medium
 
   [ Felix Lechner ]
