--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.29.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Sun, 20 Oct 2019 11:29:40 +0100
+
 lintian (2.29.0) unstable; urgency=medium
 
   * Summary of tag changes:
