--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.31.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 29 Oct 2019 13:12:28 +0000
+
 lintian (2.31.0) unstable; urgency=medium
 
   [ Chris Lamb ]
