--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.32.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 31 Oct 2019 11:08:35 -0700
+
 lintian (2.32.0) unstable; urgency=medium
 
   [ Chris Lamb ]
