--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,27 @@
-lintian (2.33.0+git) UNRELEASED; urgency=medium
+lintian (2.34.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  [ Chris Lamb ]
+  * Don't emit package-supports-alternative-init-but-no-init.d-script when
+    we have a .path and .service pair, in parallel to allowing .service and
+    .timer pairs released in Lintian 2.29.0 via #933109. (Closes: #944094)
+  * Don't emit changelog-file-missing-explicit-entry for stable updates.
+    (Closes: #944098)
 
- -- Chris Lamb <lamby@debian.org>  Mon, 04 Nov 2019 10:02:14 -0800
+  [ Felix Lechner ]
+  * Insert 'keys' before hashes for Perl in stretch. (Closes: #943910)
+  * In text-output, offer hyperlinks to tag descriptions on
+    <https://lintian.debian.org>.
+  * Turn the Lintian::Collect package into a Moo common role for all
+    consumers of collected data.
+  * Test for POD coverage in all files but allow exceptions via
+    Pod::Coverage::TrustPod. Add libpod-coverage-trustpod-perl to
+    Build-Depends.
+  * In Info::Changelog::Entry, adjust POD to avoid runtime errors.
+
+  [ Peter Wienemann ]
+  * Simplify the testing of the 'standards-version-classifications' tag.
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 07 Nov 2019 18:44:29 +0000
 
 lintian (2.33.0) unstable; urgency=medium
 
