--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.34.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 07 Nov 2019 11:06:45 -0800
+
 lintian (2.34.0) unstable; urgency=medium
 
   [ Chris Lamb ]
