--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.35.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 12 Nov 2019 09:45:23 +0100
+
 lintian (2.35.0) unstable; urgency=medium
 
   * Summary of tag changes:
