--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-lintian (2.35.0+git) UNRELEASED; urgency=medium
+lintian (2.36.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  * Don't emit systemd-service-file-missing-install-key for .service files
+    with corresponding .path or .timer pairs. (Closes: #944145)
 
- -- Chris Lamb <lamby@debian.org>  Tue, 12 Nov 2019 09:45:23 +0100
+ -- Chris Lamb <lamby@debian.org>  Fri, 15 Nov 2019 12:18:04 +0000
 
 lintian (2.35.0) unstable; urgency=medium
 
