--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.36.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 15 Nov 2019 18:39:52 +0000
+
 lintian (2.36.0) unstable; urgency=medium
 
   * Don't emit systemd-service-file-missing-install-key for .service files
