--- a/debian/changelog
+++ b/debian/changelog
@@ -7,12 +7,14 @@ lintian (2.37.0+git) UNRELEASED; urgency=medium
 lintian (2.37.0) unstable; urgency=medium
 
   [ Chris Lamb ]
-  * WIP (generated upon release).
-  * Don't emit missing-depends-on-sensible-utils for sensible-utils itself. (Closes: #944895)
-  * Correct logic when excluding .path/.timer & .service pairs from systemd-service-file-missing-install-key. Thanks, Richard Laager <rlaager@wiktel.com>. (Closes: #944145)
+  * Don't emit missing-depends-on-sensible-utils for sensible-utils itself.
+    (Closes: #944895)
+  * Correct logic when excluding .path/.timer & .service pairs from
+    systemd-service-file-missing-install-key. Thanks, Richard Laager
+    <rlaager@wiktel.com>. (Closes: #944145)
 
   [ Paul Wise ]
-  * spelling: Add several corrections
+  * Add several spelling corrections.
 
  -- Chris Lamb <lamby@debian.org>  Tue, 19 Nov 2019 16:23:48 +0000
 
