--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.38.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 22 Nov 2019 15:30:50 -0500
+
 lintian (2.38.0) unstable; urgency=medium
 
   [ Felix Lechner ]
