--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.39.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Thu, 28 Nov 2019 10:57:37 +0000
+
 lintian (2.39.0) unstable; urgency=medium
 
   [ Scott Talbert ]
