--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,25 @@
-lintian (2.39.0+git) UNRELEASED; urgency=medium
+lintian (2.40.0) unstable; urgency=medium
 
-  * WIP (generated upon release).
+  [ Chris Lamb ]
+  * Sync data/fields/build-profiles and the long description of
+    invalid-profile-name-in-build-profiles-field with the latest profiles,
+    particularly including the new "noinsttest". (Closes: #945891)
+  * Use "is_executable" over checking for a specific umask for
+    debian-rules-not-executable and update the long description of
+    this tag to not imply that (exactly) 0755 permissions are required.
+    (Closes: #945869)
+  * Don't rebuild test packages if the test specifications have not
+    changed; build-test-packages will do the right thing now.
 
- -- Chris Lamb <lamby@debian.org>  Thu, 28 Nov 2019 10:57:37 +0000
+  [ Felix Lechner ]
+  * Split all test specifications into separate instructions for the
+    building and the evaluation of test packages.
+
+  [ Peter Wienemann ]
+  * Add new classification tags for packages maintained by individuals,
+    groups and teams.
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 03 Dec 2019 20:41:17 +0000
 
 lintian (2.39.0) unstable; urgency=medium
 
