--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.40.0+git) UNRELEASED; urgency=medium
+
+  * WIP (generated upon release).
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 03 Dec 2019 22:02:38 +0100
+
 lintian (2.40.0) unstable; urgency=medium
 
   [ Chris Lamb ]
