--- a/t/tags/checks/manpages/manpages-general/build-spec/debian/install
+++ b/t/tags/checks/manpages/manpages-general/build-spec/debian/install
@@ -1,8 +1,7 @@
-bin/usr-bin-binary-alt /usr/bin
-bin/usr-sbin-binary /usr/sbin
-bin/rstartd /usr/X11R6/bin
-bin/binary-without-english-manpage /usr/bin
-man/binary-without-english-manpage.1 /usr/share/man/de/man1
-man/rstartd.1x /usr/X11R6/man/man1
+bin/* /usr/bin
+sbin/* /usr/sbin
+bin-x/* /usr/X11R6/bin
+man-x/* /usr/X11R6/man/man1
+man-de/* /usr/share/man/de/man1
 man/test-latin1-chars.1p /usr/share/man/de/man1
 man/test-utf8-chars.1p /usr/share/man/de_DE/man1
